<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mohamed.quiz.MainActivity">

    <ScrollView
        android:layout_width="368dp"
        android:layout_height="495dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Introduction"
                style="@style/Question"
                android:text="@string/Introduction" />

            <TextView
                android:id="@+id/Question1"
                style="@style/Question"
                android:text="@string/Question1" />

            <TextView
                android:id="@+id/Question1_1"
                style="@style/Question_n"
                android:text="@string/Question1_1" />

            <RadioGroup
                android:id="@+id/RadioGroup1"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/Buttun1_1"
                    style="@style/RadioButton"
                    android:text=" 6 " />

                <RadioButton
                    android:id="@+id/Buttun1_2"
                    style="@style/RadioButton"
                    android:text=" 7 " />

                <RadioButton
                    android:id="@+id/Buttun1_3"
                    style="@style/RadioButton"
                    android:text=" 8 " />
            </RadioGroup>

            <TextView
                android:id="@+id/Question2"
                style="@style/Question"
                android:text="@string/Question2" />

            <TextView
                android:id="@+id/Question2_1"
                style="@style/Question_n"
                android:text="@string/Question2_1" />

            <RadioGroup
                android:id="@+id/RadioGroup2"
                style="@style/RadioGroup">

                <RadioButton
                    android:id="@+id/Buttun2_1"
                    style="@style/RadioButton"
                    android:text=" 50 " />

                <RadioButton
                    android:id="@+id/Buttun2_2"
                    style="@style/RadioButton"
                    android:text=" 45 " />

                <RadioButton
                    android:id="@+id/Buttun2_3"
                    style="@style/RadioButton"
                    android:text=" 60 " />
            </RadioGroup>

            <TextView
                android:id="@+id/Question3"
                style="@style/Question"
                android:text="@string/Question3" />

            <TextView
                android:id="@+id/Question3_1"
                style="@style/Question_n"
                android:text="@string/Question3_1" />

            <CheckBox
                android:id="@+id/checkbox_3_1"
                style="@style/Question_n"
                android:text="@string/Answer3_1" />

            <CheckBox
                android:id="@+id/checkbox_3_2"
                style="@style/Question_n"
                android:text="@string/Answer3_2" />

            <CheckBox
                android:id="@+id/checkbox_3_3"
                style="@style/Question_n"
                android:text="@string/Answer3_3" />

            <CheckBox
                android:id="@+id/checkbox_3_4"
                style="@style/Question_n"
                android:text="@string/Answer3_4" />

            <TextView
                android:id="@+id/Question4"
                style="@style/Question"
                android:text="@string/Question4" />

            <TextView
                android:id="@+id/Question4_1"
                style="@style/Question_n"
                android:text="@string/Question4_1" />

            <CheckBox
                android:id="@+id/checkbox_4_1"
                style="@style/Question_n"
                android:text="@string/Answer4_1" />

            <CheckBox
                android:id="@+id/checkbox_4_2"
                style="@style/Question_n"
                android:text="@string/Answer4_2" />

            <CheckBox
                android:id="@+id/checkbox_4_3"
                style="@style/Question_n"
                android:text="@string/Answer4_3" />

            <CheckBox
                android:id="@+id/checkbox_4_4"
                style="@style/Question_n"
                android:text="@string/Answer4_4" />

            <TextView
                android:id="@+id/Question5"
                style="@style/Question"
                android:text="@string/Question5" />

            <TextView
                android:id="@+id/Question5_1"
                style="@style/Question_n"
                android:text="@string/Question5_1" />

            <EditText
                android:id="@+id/editText"
                style="@style/Question_n"
                android:hint=" Enter Your Answer Here" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/Submit"
                    style="@style/Button"
                    android:layout_alignParentBottom="true"
                    android:onClick="clickSubmit"
                    android:text="Submit" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
